tests/errors/string_special_within.error
parse error at line 1 column 4 for CrLf:
com;mand
   ^